force-app/main/default/objects/Kyosin7Setting__mdt/Kyosin7Setting__mdt.object-meta.xml
<CustomObject>
    <label>Kyosin7処理設定</label>
</CustomObject>