force-app/main/default/objects/Kyosin7Setting__mdt/fields/DailyReport_MidnightEndTime__c.field-meta.xml
<CustomField>
    <fullName>DailyReport_MidnightEndTime__c</fullName>
    <inlineHelpText>深夜時間の終了時間を設定</inlineHelpText>
    <label>日報_深夜終了時間</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>