force-app/main/default/objects/Kyosin7Setting__mdt/fields/DailyReport_MidnightStartTime__c.field-meta.xml
<CustomField>
    <fullName>DailyReport_MidnightStartTime__c</fullName>
    <inlineHelpText>深夜時間の開始時間を設定</inlineHelpText>
    <label>日報_深夜開始時間</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>