force-app/main/default/objects/Kyosin7Setting__mdt/fields/DailyReport_WorkingHours__c.field-meta.xml
<CustomField>
    <fullName>DailyReport_WorkingHours__c</fullName>
    <inlineHelpText>1日の勤務時間を設定</inlineHelpText>
    <label>日報_勤務時間</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>