force-app/main/default/objects/Kyosin7Setting__mdt/fields/DailyReportAuto__c.field-meta.xml
<CustomField>
    <fullName>DailyReportAuto__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>日報トリガ処理の設定</inlineHelpText>
    <label>日報トリガ処理</label>
    <type>Checkbox</type>
</CustomField>