force-app/main/default/objects/Kyosin7Setting__mdt/fields/EventAuto__c.field-meta.xml
<CustomField>
    <fullName>EventAuto__c</fullName>
    <defaultValue>true</defaultValue>
    <label>行動トリガ自動処理</label>
    <type>Checkbox</type>
</CustomField>