force-app/main/default/objects/Kyosin7Setting__mdt/fields/GetMinimumPaid__c.field-meta.xml
<CustomField>
    <fullName>GetMinimumPaid__c</fullName>
    <inlineHelpText>年間の有給の取得義務日数</inlineHelpText>
    <label>有休取得義務日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>