force-app/main/default/objects/Kyosin7Setting__mdt/fields/PaidHolidaysAuto__c.field-meta.xml
<CustomField>
    <fullName>PaidHolidaysAuto__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>有給休暇トリガ処理の設定</inlineHelpText>
    <label>有給休暇トリガ処理</label>
    <type>Checkbox</type>
</CustomField>