force-app/main/default/objects/Kyosin7Setting__mdt/fields/TimeStamp_BeforeWorkingHours__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_BeforeWorkingHours__c</fullName>
    <inlineHelpText>日跨りで前日の勤務に含める退社時間</inlineHelpText>
    <label>打刻_前日の勤務に含める退社時間</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>