force-app/main/default/objects/Kyosin7Setting__mdt/fields/TimeStamp_ScheduledTime__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_ScheduledTime__c</fullName>
    <defaultValue>true</defaultValue>
    <label>打刻_日報に予定時間を反映</label>
    <type>Checkbox</type>
</CustomField>