force-app/main/default/objects/Kyosin7Setting__mdt/fields/TimeStamp_TimeInputType__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_TimeInputType__c</fullName>
    <inlineHelpText>打刻時間入力の種別を選択</inlineHelpText>
    <label>打刻_時間入力種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>入力アシスト</fullName>
                <default>true</default>
                <label>入力アシスト</label>
            </value>
            <value>
                <fullName>30分刻み</fullName>
            </value>
            <value>
                <fullName>15分刻み</fullName>
            </value>
            <value>
                <fullName>タイムスタンプ</fullName>
            </value>
            <value>
                <fullName>手入力</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>