force-app/main/default/objects/Kyosin7Setting__mdt/fields/TimeStampAuto__c.field-meta.xml
<CustomField>
    <fullName>TimeStampAuto__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>打刻トリガ処理の設定</inlineHelpText>
    <label>打刻トリガ処理</label>
    <type>Checkbox</type>
</CustomField>